# influence-simulator

./: README.md  pyproject.toml  tox.ini
influence_simulator/: __init__.py  __main__.py  influence_simulator.py  utils.py
influence_simulator/simulators/: __init__.py  indepndent_cascade_simulator.py  influence_simulator.py
tests/: conftest.py  test_ic_simulator.py  test_influence_simulator.py
