[project]
name = "influence_simulator"

authors = [
    {name = "Adam Piróg"},
    {name = "Mateusz Stolarski"}
    ]

description = "Scirpt package for simulating influence in networks"
readme = "README.md"
license = { text="MIT" }
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [

    ]

[project.optional-dependencies]
dev = [
    "pytest",
    "isort",
    "black",
    "pylint"
    ]

[build-system]
requires = ["setuptools>=60.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["influence_simulator*"]

[tool.setuptools.dynamic]
version = {attr = "influence_simulator.version.__version__"}
[project.scripts]
influence-simulator = "influence_simulator.__main__:cli"

[tool.black]
line-length = 79
target-version = ["py311"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.isort]
profile = "black"
line_length = 79
lines_after_imports = 2
