[project]
name = "influence_simulator"

authors = [
    {name = "Adam Piróg"},
    {name = "Mateusz Stolarski"}
    ]

description = "Package for simulating node influence in networks"
readme = "README.md"
license = { text="MIT" }
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.3,<4.0",
    "numpy>=1.26.4,<2.0.0",
    "tqdm>=4.66.0,<5.0.0"
    ]

[project.optional-dependencies]
dev = [
    "pytest",
    "isort",
    "black",
    "pylint"
    ]
internal = [
    "lightning-diffusion @ git+https://github.com/network-science-lab/lightning-diffusion"
    ]

[build-system]
requires = ["setuptools>=60.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["influence_simulator*"]

[tool.setuptools.dynamic]
version = {attr = "influence_simulator.version.__version__"}

[project.scripts]
influence-simulator = "influence_simulator.__main__:cli"

[tool.black]
line-length = 79
target-version = ["py311"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.isort]
profile = "black"
line_length = 79
lines_after_imports = 2
